--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div>
-    <p>Hi my name is Steve Ifeanyi.</p>
+    <p>Hi my name is Steve Ifeanyi Nwakasi.</p>
     <p>I am a software developer</p>
   </div>
 </body>
